--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -29,8 +29,9 @@
       <mat-card-actions>
         <button mat-button>Like</button>
         <button mat-button>Share</button>
+        <button mat-button>Trial version</button>
       </mat-card-actions>
     </mat-card>
   </div>
-
 </div>
+<!-- I SET COMMENT FOR GIT SETTING-->
