--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,8 +6,8 @@
      fxLayoutGap="10px"
      fxLayoutGap.xs="0">
 
-  <div fxFlex="40">
-    <mat-card *ngIf="dish">
+  <div fxFlex="40" *ngIf="dish">
+    <mat-card>
       <mat-card-header>
         <mat-card-title>
           <h3>{{dish.name | uppercase}}</h3>
@@ -24,9 +24,9 @@
     </mat-card>
   </div>
 
-  <div fxFlex="40">
+  <div fxFlex="40" *ngIf="dish">
     <h3>Comments</h3>
-    <mat-list *ngIf="dish" >
+    <mat-list>
       <mat-list-item *ngFor="let comments of dish.comments">
         <p mat-line>{{comments.comment}}</p>
         <p mat-line>{{comments.rating}} Stars</p>
