--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,7 +7,7 @@
   </div>
   <div fxFlex>
     <mat-grid-list cols="2" rowHeight="200px">
-      <mat-grid-tile *ngFor="let dish of dishes">
+      <mat-grid-tile *ngFor="let dish of dishes" (click) = "onSelect(dish)">
         <img src="{{dish.image}}" height="200px" alt="{{dish.name}}">
         <mat-grid-tile-footer>
           <h1>{{dish.name | uppercase}}</h1>
@@ -16,4 +16,4 @@
     </mat-grid-list>
   </div>
 </div>
-<app-dishdetail></app-dishdetail>
+<app-dishdetail [dish]="selectedDish"></app-dishdetail>
