--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,7 +7,7 @@
   </div>
   <div fxFlex>
     <mat-grid-list cols="2" rowHeight="200px">
-      <mat-grid-tile *ngFor="let dish of dishes">
+      <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
         <img src="{{dish.image}}" height="200px" alt="{{dish.name}}">
         <mat-grid-tile-footer>
           <h1>{{dish.name | uppercase}}</h1>
@@ -15,23 +15,4 @@
       </mat-grid-tile>
     </mat-grid-list>
   </div>
-  <div fxFlex *ngIf="selectedDish">
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>
-          <h3>{{selectedDish.name | uppercase}}</h3>
-        </mat-card-title>
-      </mat-card-header>
-      <img mat-card-image src="{{selectedDish.image}}" alt="{{selectedDish.name}}">
-      <mat-card-content>
-        <p>{{selectedDish.description}}</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>Like</button>
-        <button mat-button>Share</button>
-        <button mat-button>Trial version</button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
 </div>
-<!-- I SET COMMENT FOR GIT SETTING-->
