--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,14 +4,16 @@
   <button mat-button mat-dialog-close>&times;</button>
 </mat-toolbar>
 <p>{{user | json}}</p>
-<form novalidate (ngSubmit)="onSubmit()">
+<form novalidate (ngSubmit)="onSubmit()" #loginForm = "ngForm">
   <mat-dialog-content>
     <p>
       <mat-form-field>
-        <input matInput placeholder="username" type="text" [(ngModel)]="user.username" name="username">
+        <input matInput placeholder="username" type="text" [(ngModel)]="user.username" name="username" #username = "ngModel" required>
+        <mat-error *ngIf="username.errors?.required">Username Required </mat-error>
       </mat-form-field>
       <mat-form-field>
-        <input matInput placeholder="password" type="Password" [(ngModel)]="user.password" name="password">
+        <input matInput placeholder="password" type="Password" [(ngModel)]="user.password" name="password" #password = "ngModel" required>
+        <mat-error *ngIf="password.errors?.required">Password Required</mat-error>
       </mat-form-field>
       <mat-checkbox [(ngModel)]="user.remember" name="remember" >Remember Me</mat-checkbox>
     </p>
@@ -19,6 +21,6 @@
   <mat-dialog-actions>
     <span class="flex-spacer"></span>
     <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-button type="submit" class="background-primary text-floral-white">Login</button>
+    <button mat-button type="submit" class="background-primary text-floral-white" [disabled]="loginForm.form.invalid">Login</button>
   </mat-dialog-actions>
 </form>
